<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tela_login"
    android:background="@drawable/shape_degrade">

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_edit_text"
        android:drawableRight="@drawable/ic_email"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColorHint="@color/black"
        app:itemIconTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editSenha"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_edit_text"
        android:drawableRight="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnEntrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_button"
        android:padding="20dp"
        android:text="@string/btn_entrar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/txtCriarConta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="btnEntrar"
        app:layout_constraintTop_toBottomOf="@+id/editSenha" />

    <TextView
        android:id="@+id/txtCriarConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="telaCadastro"
        android:text="@string/criar_conta"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />

</androidx.constraintlayout.widget.ConstraintLayout>
