<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FormCadatroActivity"
    android:id="@+id/form_cadastro"
    android:background="@drawable/shape_degrade">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/txt_criar_cadastro"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:elevation="2dp"
        app:layout_constraintBottom_toTopOf="@+id/editEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31"
        app:layout_constraintVertical_chainStyle="packed"
        android:shadowColor="#40FFFFFF"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"

        android:background="@drawable/shape_edit_text"
        android:drawableEnd="@drawable/ic_email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColorHint="@color/black"
        app:itemIconTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_edit_text"
        android:drawableEnd="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnCadastro"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:padding="20dp"
        android:text="@string/cadastar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSenha" />

</androidx.constraintlayout.widget.ConstraintLayout>